# libphpphar

./: .gitignore  README.md  pyproject.toml  setup.py
phpphar/: __init__.py  builder.py  constants.py  reader.py  types.py  utils.py  writer.py
phpphar/io/: __init__.py  phar.py
