[project]
name = "libphpphar"
version = "0.0.1a1"
description = "generate PHP phar archives on the fly"
requires-python = ">=3.9"
authors = [{ name = "Frank", email = "frankli0324@hotmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = ["libphpserialize"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/frankli0324/libphpphar"
